# ai-companion-chat-app

./: .gitignore  README.md  docker-compose.yml  init-db.sql
nginx/: nginx.conf
postgres/: README.md
postgres/k8s/: postgres-configmap.yaml  postgres-secret.yaml  pvc.yaml  service.yaml  statefulset.yaml
rabbit/k8s/: pvc.yaml  statefulset.yaml
redis/k8s/: README.md  secret.yaml  service.yaml  statefulset.yaml
src/ai-consumer/: Dockerfile  consumer.py  models.py  pyproject.toml  redis_config.py  requirements.txt  utils.py
src/ai-consumer/character_response/: __init__.py  reply.py
src/ai-consumer/k8s/: ai-consumer-deploy.yaml  configmap.yaml  secret.yaml
src/ai-consumer/rate_limiter/: limit.py
src/ai_character/: .dockerignore  Dockerfile  alembic.ini  config.py  crud.py  main.py  models.py  pyproject.toml  requirements.txt  routers.py  schemas.py
src/auth/: .dockerignore  Dockerfile  README.md  config.py  db.py  dependencies.py  main.py  models.py  pyproject.toml  requirements.txt
src/chat-ws/: .dockerignore  Dockerfile  config.py  connection_manager.py  db.py  main.py  models.py  pyproject.toml  rabbitmq_config.py  redis_config.py  requirements.txt  utils.py
src/chat-ws/app/: main.py
src/chat-ws/app/core/: __init__.py  rabbitmq_config.py  redis_config.py
src/chat-ws/app/db/: __init__.py  db.py  models.py
src/chat-ws/app/ipc/: validate_token.py
src/chat-ws/app/websocket_conn/: connection_manager.py
src/chat-ws/k8s/: chat-ws-deploy.yaml  configmap.yaml  ingress.yaml  secret.yaml  service.yaml
src/gateway/: Dockerfile  main.py  pyproject.toml  (+1 more)
(+51 files in other folders)
