[project]
name = "ai-consumer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aio-pika>=9.5.8",
    "google-genai>=1.56.0",
    "langchain>=1.2.0",
    "langchain-google-genai>=4.1.2",
    "pika>=1.3.2",
    "redis>=7.1.0",
    "sqlalchemy>=2.0.45",
]
