[project]
name = "chat-ws"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.125.0",
    "pika>=1.3.2",
    "pydantic-settings>=2.12.0",
    "redis>=7.1.0",
    "requests>=2.32.5",
    "sqlalchemy>=2.0.45",
    "websockets>=15.0.1",
]
